--- a/public/index.html
+++ b/public/index.html
@@ -10,46 +10,7 @@
 		-->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-		<style>
-			html, body {
-				height: 100%;
-				margin: 0;
-			}
-			.fade-enter {
-				opacity: 0;
-			}
-			.fade-enter-active {
-				opacity: 1;
-				transition: opacity 300ms ease-in;
-			}
-			.fade-exit {
-				opacity: 1;
-			}
-
-			.fade-exit.fade-exit-active {
-				opacity: 0.01;
-				transition: opacity 300ms ease-in;
-			}
-
-			.fade-leave {
-				opacity: 1;
-			}
-			.fade-leave-active {
-				opacity: 0;
-				transition: opacity 300ms ease-in;
-			}
-
-			div.transition-group {
-				position: relative;
-			}
-
-			section.route-section {
-				position: absolute;
-				width: 100%;
-				top: 0;
-				left: 0;
-			}
-		</style>
+		<link rel="stylesheet" href="css/style.css">
 		<!--
 			Notice the use of %PUBLIC_URL% in the tags above.
 			It will be replaced with the URL of the `public` folder during the build.
